# nes-rs

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
src/: binutils.rs  cpu.rs  errors.rs  main.rs  memory.rs
src/debugger/: debugger.rs  mod.rs  parser.rs
src/io/: binutils.rs  errors.rs  log.rs  mod.rs
src/nes/: cpu.rs  instruction.rs  memory.rs  mod.rs  nes.rs  opcode.rs  ppu.rs
src/utils/: arithmetic.rs  mod.rs  paging.rs
